--- a/Repair/index.html
+++ b/Repair/index.html
@@ -206,7 +206,7 @@
     }
     function showMessage(e) {
       Swal.fire({
-        title: '...กรุณารอสักครู...',
+        title: '...กรุณารอสักครู่...',
         text: '...ระบบกำลังบันทึกข้อมูล...',
         showConfirmButton: false,
         willOpen: () => {
